deploy/k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: preview
  labels:
    app.kubernetes.io/name: preview
spec:
  type: ClusterIP
  selector:
    app.kubernetes.io/name: preview
  ports:
    - name: http
      port: 80
      targetPort: http
